# Daydream_handler

./: .gitattributes  .gitignore  BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE
.github/workflows/: bitget_trading.yml  debug.yml  main.yml  ml_train.yml
cmake/: compiler_flags.cmake  dependencies.cmake
docs/: architecture.md  prompt_engineering.md  settings.md
models/advanced_model/: model_merged.safetensors  train_advanced_telemetry.jsonl  train_advanced_weights.safetensors
models/advanced_model/layer0_rebuild/: layer0.safetensors  layer0.snapshot-final.safetensors  layer0_rebuild.h5  layer0_rebuild.joblib  layer0_rebuild.keras  layer0_rebuild.onnx  replay_buffer.safetensors  training_log.csv
models/advanced_model/layer0_rebuild/eval/: layer0_rebuild_summary.json
models/advanced_model/layer0_rebuild/snapshots/: snapshot_epoch_0001.safetensors  snapshot_epoch_0002.safetensors  snapshot_epoch_0003.safetensors  snapshot_epoch_0004.safetensors  snapshot_epoch_0005.safetensors  snapshot_epoch_0006.safetensors  snapshot_epoch_0007.safetensors  snapshot_epoch_0008.safetensors  snapshot_epoch_0009.safetensors  snapshot_epoch_0010.safetensors  snapshot_epoch_0011.safetensors  snapshot_epoch_0012.safetensors
models/layer0_model_l0/: grand_unified_best_model.joblib  grand_unified_manifest.json  grand_unified_model.safetensors  layer0.safetensors  layer0.snapshot-final.safetensors  replay_buffer.safetensors
src/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt  cli.cpp  cli.hpp
src/core/engine/: CMakeLists.txt  trading_engine.cpp  trading_engine.hpp
src/core/indicators/: CMakeLists.txt  fibonacci.hpp  ichimoku.hpp  liquidity.hpp  supply_demand.hpp  volatility_cloud.hpp
src/core/risk/: CMakeLists.txt  risk_manager.hpp
src/core/strategy/: CMakeLists.txt  strategy.cpp  strategy.hpp
src/data/: CMakeLists.txt  data_pipeline.hpp  market_data.hpp  timeseries.hpp
src/exchange/: CMakeLists.txt
src/exchange/bitget/: bitget_auth.cpp  bitget_auth.hpp  bitget_client.hpp  bitget_rest_client.cpp  bitget_rest_client.hpp  bitget_types.hpp  bitget_ws_client.cpp  bitget_ws_client.hpp  rate_limiter.hpp
src/logging/: CMakeLists.txt  logger.cpp  logger.hpp  telemetry.cpp  telemetry.hpp
src/ml/inference/: CMakeLists.txt  feature_composer.cpp  feature_composer.hpp  h5_model.cpp  h5_model.hpp  inference_engine.cpp  inference_engine.hpp  keras_model.cpp  keras_model.hpp  manifest_feature_composer.cpp  manifest_feature_composer.hpp  model_loader.cpp  model_loader.hpp  onnx_model.cpp  onnx_model.hpp  safetensors_model.cpp  safetensors_model.hpp
src/ml/loader/: CMakeLists.txt  model_loader.cpp  model_loader.hpp  safetensors_reader.hpp
src/storage/: CMakeLists.txt  checkpoint_manager.hpp  redis_client.cpp  redis_client.hpp  safetensors_loader.hpp
tests/: CMakeLists.txt
tests/unit/: test_bitget_auth.cpp  test_bitget_types.cpp  test_checkpoint.cpp  test_cli.cpp  test_feature_composer.cpp  test_h5_model.cpp  test_indicators.cpp  test_inference.cpp  test_manifest_feature_composer.cpp  test_model_loader.cpp  test_onnx_model.cpp  test_risk_manager.cpp  test_safetensors_loader.cpp  test_safetensors_model.cpp  test_timeseries.cpp
